--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,679 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@700&family=Karla:wght@500&family=Nunito:wght@500&family=Oxygen&family=Work+Sans:wght@500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Saira+Condensed:wght@100&family=Work+Sans:wght@200;300&family=Zen+Maru+Gothic:wght@300&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(29, 5, 61);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 8rem;
+  font-family: 'Karla', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+  width: 100%;
+  height: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logo {
+  position: absolute;
+  top: 1rem;
+  left: 5rem;
+}
+
+.title {
+  font-size: 1.5rem;
+}
+
+.title, .description {
+  color: white;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1rem;
+}
+
+.counter {
+  width: 80px;
+  height: 90px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 10px;
+  color: rgb(29, 5, 61);
+  background-color: white;
+}
+
+.show-counter {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.forms .standard {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.emailform {
+  width: 70%;
+  height: 20%;
+  margin: auto;
+  position: relative;
+  top: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+.emailform .email {
+  width: 50%;
+  margin-top: 30px;
+  margin-left: 4rem;
+  margin: auto;
+  padding: 1rem;
+  border-radius: 50px;
+  outline: none;
+  border: none;
+  padding-left: 50px;
+}
+
+.emailform .embut {
+  width: 35%;
+  color: white;
+  background-color: blue;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 50px;
+  padding: 1rem;
+  position: absolute;
+  bottom: 0rem;
+  right: 3rem;
+}
+
+.contact {
+  width: 150px;
+  display: inline-block;
+  border-radius: 20px;
+  padding: .5rem;
+  background-color: blue;
+}
+
+.nav-link {
+  position: absolute;
+  top: 2rem;
+  right: 3rem;
+}
+
+.link {
+  text-decoration: none;
+  color: white;
+  border-radius: 20px;
+  padding: 5px;
+  margin: 1.8rem;
+  font-size: .8rem;
+}
+
+.link-about {
+  text-decoration: none;
+  color: rgb(180, 12, 180);
+  border-radius: 20px;
+  font-size: 1rem;
+}
+
+.active {
+    color: rgb(180, 12, 180);
+}
+
+.contact .active {
+  color: white;
+}
+
+.bubble {
+  width: 90px;
+  height: 90px;
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.one {
+  position: absolute;
+  left: 10rem;
+  top: 6.5rem;
+  border: none;
+  background-image: linear-gradient(rgb(102, 5, 102), rgb(29, 5, 61));
+}
+
+.two {
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  top: 15.5rem;
+  right: 16rem;
+  border: none;
+  background-image: linear-gradient(rgb(28, 84, 158), rgba(29, 5, 61, 0));
+}
+
+.three {
+  width: 110px;
+  height: 110px;
+  position: absolute;
+  bottom: -3rem;
+  border: none;
+  background-image: linear-gradient(rgba(255, 166, 0, 0.349), rgb(29, 5, 61));
+}
+
+.four {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 12rem;
+  right: 9rem;
+  border: none;
+  background-image: linear-gradient(rgb(28, 84, 158), rgba(29, 5, 61, 0));
+}
+
+.five {
+  width: 180px;
+  height: 180px;
+  position: absolute;
+  top: 15rem;
+  right: 3rem;
+  border: none;
+  background-image: linear-gradient(rgb(28, 84, 158), rgba(29, 5, 61, 0));
+}
+
+.foot {
+  width: 800px;
+  height: 400px;
+  border-radius: 1000px 1000px 0 0;
+  background-color: rgba(255, 255, 255, 0.062);
+  margin: auto;
+  position: relative;
+  bottom: -3rem;
+}
+
+.foot-about {
+  width: 50%;
+  height: 300px;
+  margin: auto;
+  position: relative;
+  top: 50rem;
+  line-height: .5rem;
+}
+
+.foote {
+  width: 100%;
+  height: 20%;
+  position: relative;
+  bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1;
+}
+
+.foote .copyright {
+  top: 12rem;
+}
+
+.icons {
+  position: relative;
+  top: 8rem;
+  color: white;
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.terms-policy {
+  width: 50%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: white;
+  position: relative;
+  top: 10rem;
+}
+
+.copyright {
+  width: 100%;
+  color: white;
+  position: relative;
+  top: 15rem;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  word-spacing: 5px;
+}
+
+.contact-form {
+  padding: 1rem;
+  color: white;
+  width: 70%;
+  max-height: 100%;
+}
+
+.contact-input {
+  padding: 1rem;
+  border-radius: 10px;
+  width: 100%;
+  border: none;
+  outline: none
+}
+
+.contact-form button {
+  background-color: blue;
+  color: white;
+  padding: 1rem;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  margin-top: 10px
+}
+
+.contact-container {
+  width: 50%;
+  height: 150%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  right: 0rem;
+  color: white;
+  z-index: 1;
+  padding: 1.5rem;
+  background-color: rgb(23, 3, 48);
+}
+
+.contact-title {
+  padding-top: 5rem;
+}
+
+.contact-title h3 {
+  font-size: 1.7rem;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 100;
+  text-align: center;
+}
+
+.comingSoon-cover {
+  position: absolute;
+  top: 0rem;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  transform: scale(2);
+  transition: all 1s;
+}
+
+.home-button {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: white;
+  color: rgb(29, 5, 61);
+  margin: auto;
+  position: relative;
+  bottom: 3.5rem;
+  right: 3.5rem; 
+  z-index: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.Rone {
+  width: 300px;
+  height: 400px;
+  background-image: linear-gradient(rgb(148, 9, 148), rgb(29, 5, 61));
+  margin: auto;
+  position: relative;
+  top: 4rem;
+  right: 10rem;
+}
+
+.Rtwo {
+  width: 300px;
+  height: 400px;
+  background-image: linear-gradient(rgb(28, 84, 158), rgba(29, 5, 61, 0));
+  /* margin: auto; */
+  position: absolute;
+  top: 5rem;
+  right: 15rem;
+}
+
+.Rthree {
+  width: 400px;
+  height: 200px;
+  background-image: linear-gradient(rgba(255, 166, 0, 0.349), rgb(29, 5, 61));
+  position: absolute;
+  top: 105rem;
+  right: 5rem;
+}
+
+.about-cover1 {
+  width: 60%;
+  height: 80%;
+  position: absolute;
+  top: 7rem;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.034);
+  backdrop-filter: blur(10px);
+}
+
+.about-cover2 {
+  width: 70%;
+  height: 70%;
+  position: absolute;
+  top: 50rem;
+  right: 0rem;
+  z-index: 4;
+  background-color: rgba(255, 255, 255, 0.034);
+  backdrop-filter: blur(10px);
+}
+
+.about-cover3 {
+  width: 100%;
+  height: 45%;
+  position: absolute;
+  top: 102rem;
+  right: 0;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.034);
+  backdrop-filter: blur(10px);
+}
+
+.built-4-saas {
+  width: 40%;
+  height: 50%;
+  right: 20rem;
+  position: absolute;
+  top: 15rem;
+  z-index: 1;
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.built-4-saas p {
+  margin: auto;
+  position: relative;
+  top: 2rem;
+  right: 70px;
+}
+
+.built-4-saas p::before {
+  content: '';
+  border-bottom: 1px solid white;
+  padding: 2rem;
+  position: relative;
+  bottom: 2.6rem;
+  right: 10px;
+}
+
+.built-4-saas h1 {
+  font-size: 4rem;
+  position: relative;
+  top: 2rem;
+  left: 2.7rem;
+}
+
+.detail {
+  width: 70%;
+  position: relative;
+  top: 8rem;
+  left: 25rem;
+}
+
+.value{
+  margin: auto;
+  width: 70%;
+  font-family: 'Open Sans', sans-serif;
+  position: relative;
+  top: 15rem;
+  font-size: 2rem;
+  color: white;
+}
+
+.section1 {
+  width: 30%;
+  color: white;
+  position: relative;
+  margin: auto;
+  top: 22.5rem;
+  left: -17rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  line-height: 2.2rem;
+}
+
+.section1 h3::before {
+  content: '01';
+  border-bottom: 1px solid white;  padding: 2rem;
+  position: relative;
+  bottom: 2.6rem;
+  right: 10px;
+  z-index: 3;
+}
+
+.section2 {
+  position: relative;
+  /* bottom: 62.5rem; */
+}
+
+.dots {
+  display: flex;
+  gap: 10px;
+  position: relative;
+  top: 5rem;
+}
+
+.grow {
+  width: 40%;
+  color: white;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: absolute;
+  top: 5rem;
+  right: 2rem;
+  z-index: 2;
+  line-height: 2.2rem;
+}
+
+.grow h3::before {
+  content: '02';
+  border-bottom: 1px solid white;
+  padding: 2rem;
+  position: relative;
+  bottom: 2.6rem;
+  right: 10px;
+  z-index: 3;
+}
+
+.question {
+  width: 40%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: absolute;
+  top: 105rem;
+  left: 2rem;
+  z-index: 2;
+  line-height: 2.2rem;
+}
+
+.foot-about {
+  top: 55rem;
+}
+
+
+
+/* Media-Query */
+
+@media screen and (max-width:1250px) {
+  .built-4-saas h1 {
+    font-size: 3em;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width:980px) {
+  .question-about {
+    position: relative;
+    bottom: 60rem;
+  }
+
+  .foot-about {
+    width: 100%;
+  }
+
+  .logo {
+    left: 1rem
+  }
+}
+
+@media screen and (max-width:930px) {
+  .built-4-saas h1 {
+    font-size: 2.5rem
+  }
+}
+
+@media screen and (max-width:900px) {
+  .built-4-saas h1 {
+    font-size: 2rem
+  }
+
+  .one {
+    left: 5rem;
+  }
+
+  .two {
+    right: 5rem;
+  }
+
+  .three {
+    top: 30rem;
+    left: 5rem;
+  }
+
+  .title {
+    font-size: 1rem;
+  }
+
+  .description p{
+    width: 50%;
+    text-align: center;
+    margin: auto;
+  }
+
+  .nav-link {
+    right: 0rem
+  }
+
+  .counter {
+    width: 70px;
+    height: 80px;
+  }
+
+  .forms .standard {
+    width: 50%;
+    margin: auto;
+  }
+
+  .emailform {
+    width: 50%;;
+  }
+
+  .embut {
+    font-size: .6rem;
+    height: 3rem;
+  }
+
+  .foote {
+    line-height: .5rem;
+  }
+
+  .Rone {
+    top: 2rem;
+  }
+
+  .four {
+    right: 0rem;
+  }
+
+  .five {
+    top: 9rem;
+  }
+
+  .detail {
+    top: 5rem;
+    left: 22rem;
+  }
+
+  .value h2 {
+    top: 4rem;
+    font-size: 2rem;
+  }
+
+  .contents {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .section1 {
+    top: 20rem;
+    left: 0rem;
+    width: 50%;
+  }
+
+  .section2 {
+    width: 100%;
+    top: 25rem;
+    left: 0;
+    margin: auto;
+  }
+
+  .grow {
+    width: 70%;
+    margin: auto;
+  }
+
+  .foot-about {
+    width: 100%;
+    top: 70rem;
+  }
+
+  .question-about {
+    position: relative;
+    bottom: 45rem;
   }
 }
